--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <h1>Beep</h1>
     <link type="text/css" rel="stylesheet" href="style.css">
     <p><img src="IMG_0750.PNG" alt="Beep" height="200" width="200"></p>
-    <p><embed src="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg" alt="My Youtube" height="360" width="640"></p>
     <h2>About:</h2>
     <p>I'm Beep!</p>
-    <p>My hobbies are Gaming, Coding, Graphics, Music, Animation, Art, Pokemon, Watching/Reading Anime and Reading.</p>
+    <p>I like to do Gaming, Coding, Graphics, Music, Animation, Art, Pokemon, and Watching/Reading Anime.</p>
+    <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>My Youtube</button></a>
   </body>
 </html>
