--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p>I'm Beep!</p>
     <p>I like to do Gaming, Coding, Graphics, Music, Animation, Art, Pokemon, and Watching/Reading Anime.</p>
     <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>My Youtube</button></a>
+    <textarea>
+      Mess around using this area if you are bored :)
+    </textarea>
   </body>
 </html>
