--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <p><img src="IMG_0750.PNG" alt="Beep" height="200" width="200"></p>
     <h2>About:</h2>
     <p>I'm Beep!</p>
-    <p>I like to do Gaming, Coding, Graphics, Music, Animation, Art, Pokemon, and Watching/Reading Anime.</p>
+    <p>Hi! I'm Beep. An indie game and music creator, who also does art. (I really like Japan and anime)</p>
     <h3>Links:</h3>
-    <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>My Youtube</button></a>
+    <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>Youtube</button></a>
+    <a href="https://bigbeenerd.itch.io/"><button>itch.io</button></a>
+    <a href="https://www.roblox.com/users/4211492586/profile"><button>Roblox</button></a>
     <h1> </h1>
     <textarea>
       Mess around using this area if you are bored :)
