--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
   <head>
     <title>Beep Beep</title>
   </head>
+  <div class="header">
+  <div class="browse">
+   <div class="browse-category">
+    Browse
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down">
+     <path d="M6 9l6 6 6-6" /></svg>
+   </div>
+   <div class="search-bar">
+    <input type="text" placeholder="Search" />
+   </div>
+    Menu
+   </div>
+  </div>
+ </div>
   <body>
     <h1>Beep</h1>
     <link type="text/css" rel="stylesheet" href="style.css">
