--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Beep Beep</title>
-  </head>
-  <body>
-    <h1>Beep</h1>
-    <link type="text/css" rel="stylesheet" href="style.css">
-    <p><img src="IMG_0750.PNG" alt="Beep" height="200" width="200"></p>
-    <h2>About:</h2>
-    <p>I'm Beep!</p>
-    <p>Hi! I'm Beep. An indie game and music creator, who also does art. (I really like Japan and anime)</p>
-    <h3>Links:</h3>
-    <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>Youtube</button></a>
+<nav class="nav">
+  <a href="#s1" class="active">About</a>
+  <a href="#s2">Projects</a>
+  <a href="#s3">Links</a>
+  <a href="#s4">Funish Stuff</a>
+</nav>
+
+<h1>Beep</h1>
+
+<article id="s1">
+  <h1>About:</h1>
+  <p>Hi! I'm Beep. An indie game and music creator, who also does art. (I really like Japan and anime and Bees)</p>
+</article>
+
+<article id="s2">
+  <h2>Projects</h2>
+  <p>I am working on various games, albums, art studies and animations.</p>
+</article>
+
+<article id="s3">
+  <h2>Links:</h2>
+  <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>Youtube</button></a>
     <a href="https://bigbeenerd.itch.io/"><button>itch.io</button></a>
     <a href="https://www.roblox.com/users/4211492586/profile"><button>Roblox</button></a>
-    <h1> </h1>
+</article>
+
+<article class="margin" id="s4">
+  <h2>Funish Stuff</h2>
     <textarea>
       Mess around using this area if you are bored :)
     </textarea>
-  </body>
+</article>
 </html>
