--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Beep Beep</title>
   </head>
   <body>
+    <link type="text/css" rel="stylesheet" href="style.css">
     <nav class="nav">
       <a href="#s1" class="active">About</a>
       <a href="#s2">Projects</a>
