--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Beep Beep</title>
+    <title>Beep</title>
   </head>
   <body>
     <link type="text/css" rel="stylesheet" href="style.css">
@@ -11,8 +11,6 @@
       <a href="#s3">Links</a>
       <a href="#s4">Funish Stuff</a>
     </nav>
-    <h1>    </h1>
-    <h1>Beep</h1>
     
     <article id="s1">
       <h1>About:</h1>
