--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>‎ </h1>
     <h1>‎ </h1>
     <h1>‎ </h1>
+    <p><img src="IMG_0750.PNG" alt="Beep" height="200" width="200"></p>
     <article id="s1">
       <h1>About:</h1>
       <p>Hi! I'm Beep. An indie game and music creator, who also does art. (I really like Japan and anime and Bees)</p>
