--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p><img src="IMG_0750.PNG" alt="Beep" height="200" width="200"></p>
     <article id="s1">
       <h1>About:</h1>
-      <p>Hi! I'm Beep. An indie game and music creator, who also does art. (I really like Japan and anime and Bees)</p>
+      <p>Hi! I'm Beep. An indie game and music creator, who also does art. I am also a content creator on youtube. The coding languages I know are Python, HTML, CSS, Lua, Scratch, and a little JavaScript. (I really like Japan and anime and Bees)</p>
     </article>
     
     <article id="s2">
