--- a/index.html
+++ b/index.html
@@ -37,10 +37,23 @@
     </article>
     
     <article class="margin" id="s4">
-      <h2>Funish Stuff</h2>
-        <textarea>
-          Mess around using this area if you are bored :)
-        </textarea>
+     <section class="side-scroll section">
+  <div class="side-scroll-container container">
+    <h2 class="side-scroll-heading heading">
+      横にスクロールするセクション
+    </h2>
+    <div class="side-scroll-list-wrapper">
+      <ul class="side-scroll-list">
+        <li class="side-scroll-item">Card</li>
+        <li class="side-scroll-item">Card</li>
+        <li class="side-scroll-item">Card</li>
+        <li class="side-scroll-item">Card</li>
+        <li class="side-scroll-item">Card</li>
+        <li class="side-scroll-item">Card</li>
+      </ul>
+    </div>
+  </div>
+</section>
     </article>
   </body>
 </html>
