--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>Youtube</button></a>
       <a href="https://bigbeenerd.itch.io/"><button>itch.io</button></a>
       <a href="https://www.roblox.com/users/4211492586/profile"><button>Roblox</button></a>
+      <a href="https://www.roblox.com/groups/33075639/Bigbeenerd-s-group#!/about"><button>Roblox Group</button></a>
     </article>
 
     <article class="margin" id="s4">
@@ -52,11 +53,7 @@
               <p><img src="Shirtyyyy.png" alt="My OG shirt" height="200" width="200"></p>
               <article id="s1">
               <li class="side-scroll-item"><a href="https://www.roblox.com/catalog/14731841383/Official-BigBeeNerd-merch">"BigBeeNerd" OG Merch (roblox)</a></li>
-              <li class="side-scroll-item">N/A</li>
-              <li class="side-scroll-item">N/A</li>
-              <li class="side-scroll-item">N/A</li>
-              <li class="side-scroll-item">N/A</li>
-              <li class="side-scroll-item">N/A</li>
+              <li class="side-scroll-item">Working on more...</li>
             </ul>
           </div>
         </div>
