--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     <article id="s2">
       <h1>‎ </h1>
       <h1>‎ </h1>
-      <h2>Projects</h2>
-      <p>I am working on various games such as Beep's RNG, Beep Battlegrounds, The hive and many more.I also work on my albums, art studies and animations.</p>
+      <h2>Projects:</h2>
+      <p>I am working on various games such as Beep's RNG, Beep Battlegrounds, The hive and many more. 
+        I also work on my albums, art studies and animations.</p>
     </article>
 
     <article id="s3">
@@ -50,7 +51,7 @@
           <h1>‎ </h1>
           <h1>‎ </h1>
           <h2 class="side-scroll-heading heading">
-            My Merch
+            My Merch:
           </h2>
           <div class="side-scroll-list-wrapper">
             <ul class="side-scroll-list">
