--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <link type="text/css" rel="stylesheet" href="style.css">
+    <script src="code.js"></script>
     <nav class="nav">
       <a href="#s1" class="active">About</a>
       <a href="#s2">Projects</a>
