--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   </head>
   <body>
     <link type="text/css" rel="stylesheet" href="style.css">
-    <script src="code.js"></script>
     <nav class="nav">
       <a href="#s1" class="active">About</a>
       <a href="#s2">Projects</a>
@@ -18,8 +17,6 @@
     <h1>I'm Beep!</h1>
     <p><img src="IMG_0750.PNG" alt="Beep" height="200" width="200"></p>
     <article id="s1">
-      <h1>‎ </h1>
-      <h1>‎ </h1>
       <h1>About:</h1>
       <p>Hi! I'm Beep. An indie game and music creator, who also does art. 
         I am also a content creator on youtube. 
@@ -29,37 +26,33 @@
     </article>
 
     <article id="s2">
-      <h1>‎ </h1>
-      <h1>‎ </h1>
-      <h2>Projects:</h2>
-      <p>I am working on various games such as Beep's RNG, Beep Battlegrounds, The hive and many more. 
-        I also work on my albums, art studies and animations.</p>
+      <h2>Projects</h2>
+      <p>I am working on various games such as Beep's RNG, Beep Battlegrounds, The hive and many more.I also work on my albums, art studies and animations.</p>
     </article>
 
     <article id="s3">
-      <h1>‎ </h1>
-      <h1>‎ </h1>
       <h2>Links:</h2>
       <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>Youtube</button></a>
       <a href="https://bigbeenerd.itch.io/"><button>itch.io</button></a>
       <a href="https://www.roblox.com/users/4211492586/profile"><button>Roblox</button></a>
-      <a href="https://www.roblox.com/groups/33075639/Bigbeenerd-s-group#!/about"><button>Roblox Group</button></a>
     </article>
 
     <article class="margin" id="s4">
       <section class="side-scroll section">
         <div class="side-scroll-container container">
-          <h1>‎ </h1>
-          <h1>‎ </h1>
           <h2 class="side-scroll-heading heading">
-            My Merch:
+            My Merch
           </h2>
           <div class="side-scroll-list-wrapper">
             <ul class="side-scroll-list">
               <p><img src="Shirtyyyy.png" alt="My OG shirt" height="200" width="200"></p>
               <article id="s1">
               <li class="side-scroll-item"><a href="https://www.roblox.com/catalog/14731841383/Official-BigBeeNerd-merch">"BigBeeNerd" OG Merch (roblox)</a></li>
-              <li class="side-scroll-item">Working on more...</li>
+              <li class="side-scroll-item">N/A</li>
+              <li class="side-scroll-item">N/A</li>
+              <li class="side-scroll-item">N/A</li>
+              <li class="side-scroll-item">N/A</li>
+              <li class="side-scroll-item">N/A</li>
             </ul>
           </div>
         </div>
