--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <body>
     <link type="text/css" rel="stylesheet" href="style.css">
     <nav class="nav">
-      <a href="#s1" class="active">About</a>
-      <a href="#s2">Projects</a>
-      <a href="#s3">Links</a>
-      <a href="#s4">My Merch</a>
+      <a href="#s1" class="active"><h2>About</h2></a>
+      <a href="#s2"><h2>Projects</h2></a>
+      <a href="#s3"><h2>Links</h2></a>
+      <a href="#s4"><h2>My Merch</h2></a>
     </nav>
     <h2>‎ </h2>
     <h2>‎ </h2>
