--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="#s2">Projects</a>
       <a href="#s3">Links</a>
       <a href="#s4">My Merch</a>
-      <a href="#s5">Artfolio</a>
+      <a href="#s5">Portifolios</a>
     </nav>
     <h2>‎ </h2>
     <h2>‎ </h2>
