--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
       <a href="https://bigbeenerd.github.io/-/"><button>Codefolio(not done)</button></a>
       <a href="https://bigbeenerd.github.io/-/"><button>Musicfolio(not done)</button></a>
     </article>
-    
+    <article id="s6">
+      <h2>‎ </h2>
+      <h2>‎ </h2>
+      <h1>My Playlist</h1>
+    <embed src="https://music.youtube.com/playlist?list=PLBK_7yx1dpCxy6fRchbpQDTOs23kHM4l3" width="500" height="600">
+    </article>
   </body>
 </html>
