--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <a href="#s3">Links</a>
       <a href="#s4">My Merch</a>
       <a href="#s5">Portifolios</a>
+      <a href="#s6">Playlist</a>
     </nav>
     <h2>‎ </h2>
     <h2>‎ </h2>
