--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <link type="text/css" rel="stylesheet" href="style.css">
     <nav class="nav">
-      <a href="#s0">≡</a>
+      <a href="https://bigbeenerd.github.io/-/">≡</a>
       <a href="#s1" class="active">About</a>
       <a href="#s2">Projects</a>
       <a href="#s3">Links</a>
