--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
       <a href="https://bigbeenerd.github.io/-/">≡</a>
       <a href="#s1" class="active">About</a>
       <a href="#s2">Projects</a>
-      <a href="#s3">Links</a>
+      <a href="#s3">Notepad</a>
       <a href="#s4">My Merch</a>
       <a href="#s5">Portifolios</a>
       <a href="#s6">Playlist</a>
+      <a href="https://www.youtube.com/@BigBeeNerd">▶️</a>
+      <a href="https://bigbeenerd.itch.io/">🎮</a>
+      <a href="https://www.roblox.com/users/4211492586/profile">🔳</a>
+      
+      
     </nav>
     <h2>‎ </h2>
     <h2>‎ </h2>
@@ -40,10 +45,10 @@
     <article id="s3">
       <h2>‎ </h2>
       <h2>‎ </h2>
-      <h2>Links:</h2>
-      <a href="https://www.youtube.com/channel/UCvqwHR6iSA653e12bsh9avg"><button>Youtube</button></a>
-      <a href="https://bigbeenerd.itch.io/"><button>itch.io</button></a>
-      <a href="https://www.roblox.com/users/4211492586/profile"><button>Roblox</button></a>
+      <h2>Notepad</h2>
+      <textarea>
+      Notepad Here
+    </textarea>
     </article>
 
     <article class="margin" id="s4">
