--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <a href="#s4">My Merch</a>
       <a href="#s5">Portifolios</a>
       <a href="#s6">Playlist</a>
+      <a href="https://bigbeenerd.github.io/-/">|</a>
       <a href="https://www.youtube.com/@BigBeeNerd">▶️</a>
       <a href="https://bigbeenerd.itch.io/">🎮</a>
       <a href="https://www.roblox.com/users/4211492586/profile">🔳</a>
