--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <nav class="nav">
       <a href="https://bigbeenerd.github.io/-/">≡</a>
+      <a href="https://bigbeenerd.github.io/-/">|</a>
       <a href="#s1" class="active">About</a>
       <a href="#s2">Projects</a>
       <a href="#s3">Notepad</a>
@@ -17,6 +18,7 @@
       <a href="https://www.youtube.com/@BigBeeNerd">▶️</a>
       <a href="https://bigbeenerd.itch.io/">🎮</a>
       <a href="https://www.roblox.com/users/4211492586/profile">🔳</a>
+      <a href="https://bigbeenerd.github.io/-/">|</a>
       
       
     </nav>
