--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="#s2">Projects</a>
       <a href="#s3">Notepad</a>
       <a href="#s4">My Merch</a>
-      <a href="#s5">Portifolios</a>
+      <a href="#s5">Tips</a>
       <a href="#s6">Playlist</a>
       <a href="https://bigbeenerd.github.io/-/">|</a>
       <a href="https://www.youtube.com/@BigBeeNerd">▶️</a>
@@ -79,10 +79,16 @@
     <article id="s5">
       <h2>‎ </h2>
       <h2>‎ </h2>
-      <h2>Portifolios:</h2>
-      <a href="https://bigbeenerd.github.io/-/"><button>Artfolio (not done)</button></a>
-      <a href="https://bigbeenerd.github.io/-/"><button>Codefolio(not done)</button></a>
-      <a href="https://bigbeenerd.github.io/-/"><button>Musicfolio(not done)</button></a>
+      <h2>Tips (Massively Appreciated)</h2>
+      <h3>Robux:</h3>
+      <button href="https://www.roblox.com/game-pass/248400994">5</button>
+      <button href="https://www.roblox.com/game-pass/215882473">10</button>
+      <button href="https://www.roblox.com/game-pass/216713906">25</button>
+      <button href="https://www.roblox.com/game-pass/211759819">50</button>
+      <button href="https://www.roblox.com/game-pass/211757189">100</button>
+      <button href="https://www.roblox.com/game-pass/211758409">500</button>
+      <button href="https://www.roblox.com/game-pass/211760519">1k</button>
+      <button href="https://www.roblox.com/game-pass/211764962">5k</button>
     </article>
     <article id="s6">
       <h2>‎ </h2>
