--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="#s2">Projects</a>
       <a href="#s3">Notepad</a>
       <a href="#s4">My Merch</a>
-      <a href="#s5">Tips</a>
+      <a href="#s5">Donations</a>
       <a href="#s6">Playlist</a>
       <a href="https://bigbeenerd.github.io/-/">|</a>
       <a href="https://www.youtube.com/@BigBeeNerd">▶️</a>
@@ -79,7 +79,7 @@
     <article id="s5">
       <h2>‎ </h2>
       <h2>‎ </h2>
-      <h2>Tips (Massively Appreciated)</h2>
+      <h2>DOnations (Massively Appreciated)</h2>
       <h3>Robux:</h3>
       <button href="https://www.roblox.com/game-pass/248400994">5</button>
       <button href="https://www.roblox.com/game-pass/215882473">10</button>
