--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <article id="s5">
       <h2>‎ </h2>
       <h2>‎ </h2>
-      <h2>DOnations (Massively Appreciated)</h2>
+      <h2>Donations (Massively Appreciated)</h2>
       <h3>Robux:</h3>
       <button href="https://www.roblox.com/game-pass/248400994">5</button>
       <button href="https://www.roblox.com/game-pass/215882473">10</button>
