--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
       <h2>‎ </h2>
       <h2>Donations (Massively Appreciated)</h2>
       <h3>Robux:</h3>
-      <button href="https://www.roblox.com/game-pass/248400994">5</button>
-      <button href="https://www.roblox.com/game-pass/215882473">10</button>
-      <button href="https://www.roblox.com/game-pass/216713906">25</button>
-      <button href="https://www.roblox.com/game-pass/211759819">50</button>
-      <button href="https://www.roblox.com/game-pass/211757189">100</button>
-      <button href="https://www.roblox.com/game-pass/211758409">500</button>
-      <button href="https://www.roblox.com/game-pass/211760519">1k</button>
-      <button href="https://www.roblox.com/game-pass/211764962">5k</button>
+      <a href="https://www.roblox.com/game-pass/248400994"><button>5</button></a>
+      <a href="https://www.roblox.com/game-pass/215882473"><button>10</button></a>
+      <a href="https://www.roblox.com/game-pass/216713906"><button>25</button></a>
+      <a href="https://www.roblox.com/game-pass/211759819"><button>50</button></a>
+      <a href="https://www.roblox.com/game-pass/211757189"><button>100</button></a>
+      <a href="https://www.roblox.com/game-pass/211758409"><button>500</button></a>
+      <a href="https://www.roblox.com/game-pass/211760519"><button>1k</button></a>
+      <a href="https://www.roblox.com/game-pass/211764962"><button>5k</button></a>
     </article>
     <article id="s6">
       <h2>‎ </h2>
