--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
   <script>
+    // Get the button:
+let mybutton = document.getElementById("myBtn");
 
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0; // For Safari
+  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+}
   </script>
   <head>
     <title>Beep</title>
@@ -99,5 +117,8 @@
       <h1>My Playlist</h1>
     <embed src="https://music.youtube.com/playlist?list=PLBK_7yx1dpCxy6fRchbpQDTOs23kHM4l3" width="1560" height="605">
     </article>
+
+    
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Go To Top</button>
   </body>
 </html>
