--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <script>
+    if (user.browser.family === 'Safari') {
+ alert('You\'re using the Safari browser, It is reccomended to go to Opera, Chrome or Firefox.'); 
+}
     // Get the button:
 let mybutton = document.getElementById("myBtn");
 
