--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <script>
+    console.log(navigator.userAgent);
+    var user = detect.parse(navigator.userAgent);
+    console.log(
+ user.browser.family
+ user.browser.version
+ user.os.name
+);
+    
     if (user.browser.family === 'Safari') {
  alert('You\'re using the Safari browser, It is reccomended to go to Opera, Chrome or Firefox.'); 
 }
