--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <script>
+    alert("Welcome! Please do not use Safari web browser with this site! It is incompatible and reccomended for you to be on Chrome, Opera or Firefox! If you are not on Safari, you are good!
     console.log(navigator.userAgent);
     var user = detect.parse(navigator.userAgent);
     console.log(
