--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
 <!DOCTYPE html>
 <html>
   <script>
-    alert("Welcome! Please do not use Safari web browser with this site! It is incompatible and reccomended for you to be on Chrome, Opera or Firefox! If you are not on Safari, you are good!
-    console.log(navigator.userAgent);
-    var user = detect.parse(navigator.userAgent);
-    console.log(
- user.browser.family
- user.browser.version
- user.os.name
-);
-
-    if (user.browser.family === 'Safari') {
- alert('You\'re using the Safari browser, It is reccomended to go to Opera, Chrome or Firefox.'); 
-}
+    alert("Welcome! If you are using it, please do not use Safari web browser with this site! It is incompatible and reccomended for you to be on Chrome, Opera or Firefox! If you are not on Safari, you are good!
     // Get the button:
 let mybutton = document.getElementById("myBtn");
 // When the user scrolls down 20px from the top of the document, show the button
