--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <script>
-    alert("Welcome! If you are using it, please do not use Safari web browser with this site! It is incompatible and reccomended for you to be on Chrome, Opera or Firefox! If you are not on Safari, you are good!
+    alert("Welcome! If you are using it, please do not use Safari web browser with this site! It is incompatible and reccomended for you to be on Chrome, Opera or Firefox! If you are not on Safari, you can carry on with your experience!
     // Get the button:
 let mybutton = document.getElementById("myBtn");
 // When the user scrolls down 20px from the top of the document, show the button
